added csv functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>NAVSEA Layout</h1>
+    <h1 class="heading">NAVSEA Layout</h1>
     <div id="toolbar">
         <div>
             <label for="width">Width</label>
@@ -24,9 +24,15 @@
             <input name="height" id="height" type="number">
         </div>
         <button id="save" class="btn">Save</button>
+        <button id="add-element" class="btn">Add Object</button>
+        <button id="download-csv" class="btn">Download CSV</button>
     </div>
     <div id="shop-layout-ui">
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"
+        integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
 
