--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <div class="modal" id="upload-csv-modal">
         <h2>Upload CSV</h2>
         <label for="csv-input">Upload CSV</label>
-        <input type="file" name="csv-input" id="csv-input" onchange="uploadCSV(this)"/>
+        <input type="file" name="csv-input" id="csv-input"/>
+        <button class="btn" id="upload-csv-confirm">Upload</button>
+        <button class="btn" id="upload-csv-cancel">Cancel</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
