add support for different colored machines

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <input id="object-width" name="object-width" type="number" value="50"/>
         <label for="object-height">Height:</label>
         <input id="object-height" name="object-height" type="number" value="50"/>
+        <label for="object-color">Color</label>
+        <input id="object-color" name="object-color" type="color"/>
         <button class="btn" id="create-object-add">Add</button>
         <button class="btn" id="create-object-cancel">Cancel</button>
     </div>
