add ui scaling and object

--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
         <button id="download-csv" class="btn">Download CSV</button>
         <button id="upload-csv" class="btn">Upload CSV</button>
     </div>
-    <div id="shop-layout-ui">
-    </div>
+    <main>
+        <div id="shop-layout-ui">
+        </div>
+    </main>
 
     <div class="modal" id="create-object-modal">
         <h2>Add Object</h2>
         <label for="object-width">Width:</label>
-        <input id="object-width" name="object-width" type="number" value="50"/>
+        <input id="object-width" name="object-width" type="number" value="50" />
         <label for="object-height">Height:</label>
-        <input id="object-height" name="object-height" type="number" value="50"/>
+        <input id="object-height" name="object-height" type="number" value="50" />
         <label for="object-color">Color</label>
-        <input id="object-color" name="object-color" type="color"/>
+        <input id="object-color" name="object-color" type="color" />
         <button class="btn" id="create-object-add">Add</button>
         <button class="btn" id="create-object-cancel">Cancel</button>
     </div>
@@ -46,7 +48,7 @@
     <div class="modal" id="upload-csv-modal">
         <h2>Upload CSV</h2>
         <label for="csv-input">Upload CSV</label>
-        <input type="file" name="csv-input" id="csv-input"/>
+        <input type="file" name="csv-input" id="csv-input" />
         <button class="btn" id="upload-csv-confirm">Upload</button>
         <button class="btn" id="upload-csv-cancel">Cancel</button>
     </div>
