--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div id="toolbar">
         <div>
             <label for="width">Width</label>
-            <input id="width" name="width" type="number" value="50">
+            <input id="width" name="width" type="number" value="20">
         </div>
         <div>
             <label for="height">Height</label>
-            <input name="height" id="height" type="number" value="20">
+            <input name="height" id="height" type="number" value="10">
         </div>
         <button id="save" class="btn">Save</button>
         <button id="add-element" class="btn">Add Object</button>
@@ -35,12 +35,8 @@
 
     <div class="modal" id="create-object-modal">
         <h2>Add Object</h2>
-        <label for="object-width">Width:</label>
-        <input id="object-width" name="object-width" type="number" value="50" />
-        <label for="object-height">Height:</label>
-        <input id="object-height" name="object-height" type="number" value="50" />
-        <label for="object-color">Color</label>
-        <input id="object-color" name="object-color" type="color" />
+        <label for="object-type">Width:</label>
+        <select name="object-type" id="object-type"></select>
         <button class="btn" id="create-object-add">Add</button>
         <button class="btn" id="create-object-cancel">Cancel</button>
     </div>
