--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <button id="upload-csv" class="btn">Upload CSV</button>
     </div>
     <main>
-        <div id="shop-layout-ui">
-        </div>
+        <!-- <div id="shop-layout-ui">
+        </div> -->
+        <canvas id="canvas"></canvas>
     </main>
 
     <div class="modal" id="create-object-modal">
